Fix various UI style/appearance issues
* Fix uncentered progress bar
* Fix misaligned/uncentered "go back" link texts
* center Muscle logo in banner
* Make text display for generated mnemonic static height rather than fitting content

Fix save phrase text box line spacing and size fitting content

Fix attempt to synchronize undefined "wallet" variable - app.js line 230

* replaced with "synchronizeWallet(this.state.wallet)

Fix uncentered progress bar on wallet sync page.

Fix muscle logo position in banner.

Logo was located immediately to the right of the title; it should have
been (and now is) centered between the title and the nav links.

--- a/src/main/components/banner.css
+++ b/src/main/components/banner.css
@@ -15,6 +15,9 @@
 }
 
 #banner-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   color: var(--text-color);
   background-color: var(--banner-color);
   width: 100%;
@@ -22,6 +25,10 @@
   height: var(--banner-height);
   position: relative;
   font-family: var(--banner-font);
+}
+
+#logo_container {
+  margin: 0 auto;
 }
 
 .link {
@@ -36,34 +43,20 @@ a:hover{
 
 .header_link {
   color: var(--text-color);
-}
-.vertical_center {
-  position: absolute;
-  margin: 0;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
-#title {
-  display: flex;
+  text-decoration: none;
+  font-size: var(--title-size);
+  font-family: var(--banner-font);
+  font-weight: bold;
+  margin-right: 25px;
+  margin-left: var(--h1-horizontal-offset);
 }
 
 #nav {
-  position: absolute;
   color: var(--nav-text-color);
   right: 0px;
   margin-right: var(--nav-horizontal-offset);
   top: var(--nav-vertical-displacement);
   font-size: var(--nav-font-size);
-}
-
-h1 {
-  font-size: var(--title-size);
-  font-family: var(--banner-font);
-  color: var(--font-color);
-  margin-right: 25px;
-  margin-left: var(--h1-horizontal-offset);
 }
 
 .nav_link {
